application/json content-length is NOT calculated automatically. argh! yii requires this header such a much! postman works better! so, you can watch docs in swagger, but use postman.
